# jokolay

./: .gitignore  Cargo.lock.backup_20240318  Cargo.toml  README.md  TODO.txt
.github/workflows/: ci.yml  jokolink_artifact.yml  release.yml
crates/joko_component_manager/: Cargo.toml
crates/joko_component_manager/src/: lib.rs
crates/joko_component_models/: Cargo.toml
crates/joko_component_models/src/: lib.rs  messages_any.rs  messages_bincode.rs
crates/joko_components/: Cargo.toml
crates/joko_components/src/: lib.rs
crates/joko_core/: Cargo.toml
crates/joko_core/src/: lib.rs
crates/joko_core/src/manager/theme/: mod.rs
crates/joko_core/src/manager/trace/: mod.rs
crates/joko_core/src/serde_glam/: mod.rs  vec2.rs  vec3.rs
crates/joko_core/src/task/: mod.rs
crates/joko_link/: Cargo.toml
crates/joko_link/src/: lib.rs
crates/joko_link/src/mumble/: mod.rs
crates/joko_link_manager/: Cargo.toml
crates/joko_link_manager/src/: lib.rs
crates/joko_link_manager/src/win/: dll.rs  mod.rs
crates/joko_link_models/: Cargo.toml
crates/joko_link_models/src/: lib.rs  messages.rs
crates/joko_link_models/src/mumble/: mod.rs
crates/joko_link_ui_manager/: Cargo.toml
crates/joko_link_ui_manager/src/: lib.rs
crates/joko_marker_format/: Cargo.toml
crates/joko_marker_format/src/: lib.rs  message.rs
crates/joko_marker_format/src/io/: deserialize.rs  mod.rs  serialize.rs
crates/joko_marker_format/src/manager/: file.rs  live_pack.rs  marker.rs  mod.rs  package.rs
crates/joko_marker_format/src/manager/pack/: activation.rs  active.rs  category_selection.rs  dirty.rs  entry.rs  file_selection.rs  import.rs  loaded.rs  mod.rs
crates/joko_marker_format/src/pack/: common.rs  marker.rs  mod.rs  route.rs  trail.rs
crates/joko_package/: Cargo.toml
crates/joko_package/src/: lib.rs  message.rs
crates/joko_package/src/io/: deserialize.rs  export.rs  mod.rs  serialize.rs
crates/joko_package/src/manager/: mod.rs  package.rs  package_data.rs  package_ui.rs
crates/joko_package/src/manager/pack/: active.rs  category_selection.rs  file_selection.rs  import.rs  list.rs  loaded.rs  mod.rs
crates/joko_package/src/pack/: common.rs  marker.rs  route.rs  trail.rs
crates/joko_package_manager/: Cargo.toml
crates/joko_package_manager/src/: lib.rs  message.rs
crates/joko_package_manager/src/io/: deserialize.rs  export.rs  serialize.rs
crates/joko_package_manager/src/manager/: mod.rs  package_data.rs  package_ui.rs
crates/joko_package_manager/src/manager/pack/: activation.rs  active.rs  category_selection.rs  dirty.rs  file_selection.rs  import.rs  loaded.rs
crates/joko_package_models/: Cargo.toml
crates/joko_package_models/src/: attributes.rs  category.rs  lib.rs  map.rs  marker.rs  package.rs  route.rs  trail.rs
crates/joko_plugin_manager/: Cargo.toml
crates/joko_plugin_manager/src/: lib.rs
crates/joko_plugins/: Cargo.toml
crates/joko_plugins/src/: lib.rs
crates/joko_render/: Cargo.toml
crates/joko_render/shaders/: trail.vs
crates/joko_render/src/: billboard.rs  gl.rs  lib.rs  renderer.rs
crates/joko_render_manager/: Cargo.toml
crates/joko_render_manager/shaders/: trail.fs
crates/joko_render_manager/src/: billboard.rs  gl.rs  lib.rs  renderer.rs
crates/joko_render_models/: Cargo.toml
crates/joko_render_models/src/: lib.rs  marker.rs  messages.rs  trail.rs
crates/joko_ui_models/: Cargo.toml
crates/joko_ui_models/src/: lib.rs
crates/jokoapi/src/: end_point.rs  lib.rs
crates/jokoapi/src/end_point/mounts/: mod.rs
crates/jokoapi/src/end_point/professions/: mod.rs
crates/jokoapi/src/end_point/races/: mod.rs
crates/jokoapi/src/end_point/specializations/: mod.rs
crates/jokolay/: Cargo.toml
crates/jokolay/src/: lib.rs
crates/jokolay/src/app/: init.rs  menu.rs  messages.rs  mod.rs  mumble.rs  ui_parameters.rs  window.rs
crates/jokolay/src/manager/theme/: mod.rs
crates/jokolay/src/manager/trace/: mod.rs
crates/jokolink/: Cargo.toml
crates/jokolink/src/: lib.rs
crates/jokolink/src/linux/: mod.rs
crates/jokolink/src/mumble/: ctypes.rs  mod.rs
crates/jokolink/src/win/: dll.rs  mod.rs
documentation/: mumble_editable.dotuml
documentation/diagrams/: category_change.dotuml  components_generated.dotuml
