
[workspace]
members = [
    "crates/joko_render",
    "crates/joko_marker_format",
    "crates/jokolink",
    "crates/jokoapi",
    "crates/jokolay",
    "crates/joko_core",
    "crates/joko_ext",
]
resolver = "2"

[workspace.dependencies]
#https://docs.rs/tracing/latest/tracing/level_filters/index.html

bytemuck = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
ringbuffer = { version = "0.14" }
egui = { version = "0.26" }
egui_extras = { version = "0.26" }
cap-directories = { version = "2" }
cap-std = { version = "2", features = ["fs_utf8"] }
serde = { version = "*", features = ["derive"] }
miette = { version = "*", features = ["fancy"] }
url = { version = "*", features = ["serde"] }
serde_json = { version = "*" }
rayon = { version = "*" }
paste = { version = "*" }
glam = { version = "*", features = ["fast-math"] }
time = { version = "*" }
ureq = { version = "*" }
enumflags2 = { version = "*" }
indexmap = { version = "2" }
rfd = { version = "*" }
smol_str = { version = "*" }
uuid = { version = "*" }
itertools = { version = "*" }
ordered_hash_map = { version = "*", features= ["serde"] }

[profile.release]
strip = "symbols"
lto = true
