
[workspace]
members = [
    "crates/joko_render",
    "crates/joko_render_models",
    "crates/joko_package",
    "crates/joko_package_models",
    "crates/jokolink",
    "crates/jokoapi",
    "crates/jokolay",
    "crates/joko_core",
    "crates/joko_ext",
]
resolver = "2"

[workspace.dependencies]
#https://docs.rs/tracing/latest/tracing/level_filters/index.html

bytemuck = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
ringbuffer = { version = "0.14" }
egui = { version = "0.26" }
egui_extras = { version = "0.26" }
cap-directories = { version = "2" }
cap-std = { version = "2", features = ["fs_utf8"] }
serde = { version = "*", features = ["derive"] }
miette = { version = "*", features = ["fancy"] }
url = { version = "*", features = ["serde"] }
serde_json = { version = "*" }
rayon = { version = "*" }
paste = { version = "*" }
glam = { version = "*", features = ["fast-math"] }
time = { version = "*" }
ureq = { version = "*" }
enumflags2 = { version = "*" }
indexmap = { version = "2" }
rfd = { version = "*" }
smol_str = { version = "*" }
uuid = { version = "*" }
itertools = { version = "*" }
ordered_hash_map = { version = "*", features= ["serde"] }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
] } # for ErrorLayer


#https://corrode.dev/blog/tips-for-faster-rust-compile-times/#use-cargo-check-instead-of-cargo-build
[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3


[profile.release]
#https://doc.rust-lang.org/cargo/reference/profiles.html#strip
#strip = "symbols"

#lto make the build very slow
#lto = true
