
[workspace]
members = [
    "crates/joko_render_manager",
    "crates/joko_render_models",
    "crates/joko_package_manager",
    "crates/joko_package_models",
    "crates/joko_link_manager",
    "crates/joko_link_ui_manager",
    "crates/joko_link_models",
    "crates/jokoapi",
    "crates/jokolay",
    "crates/joko_core",
    "crates/joko_ui_models",
    "crates/joko_component_manager",
    "crates/joko_component_models",
    "crates/joko_plugin_manager",
    "crates/joko_ext",
]
resolver = "2"

[workspace.dependencies]
#https://docs.rs/tracing/latest/tracing/level_filters/index.html

bimap = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"
bytemuck = { version = "1", features = ["derive"] }
cap-directories = { version = "2" }
cap-std = { version = "2", features = ["fs_utf8"] }
egui = { version = "0.26" }
egui_extras = { version = "0.26" }
enumflags2 = { version = "*", features = ["serde"] }
glam = { version = "*", features = ["fast-math"] }
indexmap = { version = "2" }
itertools = { version = "*" }
miette = { version = "*", features = ["fancy"] }
ordered_hash_map = { version = "*", features= ["serde"] }
paste = { version = "*" }
once = "0.3.4"
rayon = { version = "*" }
rfd = { version = "*" }
ringbuffer = { version = "0.14" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
smol_str = { version = "*", features = ["serde"] }
time = { version = "*" }
tokio = { version = "1.37.0", features = ["sync"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time",] } # for ErrorLayer
ureq = { version = "*" }
url = { version = "*", features = ["serde"] }
uuid = { version = "*" }
mutually_exclusive_features = "0.1.0"
ractor = "0.9.8"



#https://corrode.dev/blog/tips-for-faster-rust-compile-times/#use-cargo-check-instead-of-cargo-build
[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3


[profile.release]
#https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = "none"

#lto make the build very slow
#lto = true
