[package]
name = "joko_component_manager"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = []

[dependencies]
bincode = { workspace = true }
egui = { workspace = true }
scopeguard = "1.2.0"
smol_str = { workspace = true }
tokio = { workspace = true }
joko_component_models = { path = "../joko_component_models" }
solvent = "0.8.3"
petgraph = "0.6.4"
tracing.workspace = true
