[package]
name = "joko_component_manager"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = ["dep:bincode"]

[dependencies]
bimap = { workspace = true }
bincode = { workspace = true, optional = true }
egui = { workspace = true }
scopeguard = "1.2.0"
tokio = { workspace = true }
joko_component_models = { path = "../joko_component_models" }
petgraph = "0.6.4"
tracing.workspace = true
