[package]
name = "joko_component_models"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = []


[dependencies]
bincode = { workspace = true }
downcast-rs = "1.2.1"
egui = { workspace = true }
scopeguard = "1.2.0"
smol_str = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
