[package]
name = "joko_core"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
glam = { workspace = true }
scopeguard = "1.2.0"
smol_str = { workspace = true }
serde = { workspace = true }
mutually_exclusive_features = { workspace = true }


[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = []
