[package]
name = "joko_link_models"
version = "0.2.1"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
joko_core = { path = "../joko_core" }
num-derive = { version = "0", default-features = false }
num-traits = { version = "0", default-features = false }
enumflags2 = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
glam = { workspace = true }

[target.'cfg(unix)'.dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
arcdps = { version = "*", default-features = false }
notify = {version = "*" }
tracing-appender = {version = "*" }
tracing-subscriber = {version = "*" }
