[package]
name = "joko_package_models"
version = "0.2.1"
edition = "2021"


[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = []


[dependencies]
# jmf deps
# for marker packs 
base64 = "0.21.2"
bincode = { workspace = true }
bimap = { version = "0.6.3", features = ["serde"] }
bytemuck = { workspace = true }
data-encoding = "2.4.0"
enumflags2 = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true, features = ["serde"]} # to keep the order of files inside zip. markers packs rely on some files like aaa.xml being read first for marker category order# for representing the paths of files inside xml pack zip
itertools = { workspace = true }
joko_core = { path = "../joko_core" }
joko_component_models = { path = "../joko_component_models" }
jokoapi = { path = "../jokoapi" }
miette = { workspace = true }
ordered_hash_map = { workspace = true }
paste = { workspace = true }
phf = { version = "*", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
xot = { version = "0.16.0" }
mutually_exclusive_features = { workspace = true }


[dev-dependencies]
# jmf deps
rstest = { version = "0", default-features = false }
# rstest_reuse = "0.3.0"
similar-asserts = "1"


[build-dependencies]
# for rapidxml
cxx-build = { version = "1" }
