[package]
name = "joko_plugins"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joko_components = { path = "../joko_components" }
scopeguard = "1.2.0"
smol_str = { workspace = true }
tokio = { workspace = true }
