# Define all structures that can be sent through asynchronous messages

[package]
name = "joko_render_models"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

joko_core = { path = "../joko_core" }
joko_components = { path = "../joko_components" }

