# Define all structures that can be sent through asynchronous messages

[package]
name = "joko_render_models"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["messages_any"]
messages_any = []
messages_downcast = []
messages_bincode = []


[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

joko_core = { path = "../joko_core" }
joko_component_models = { path = "../joko_component_models" }
mutually_exclusive_features = { workspace = true }


