[package]
name = "jokolay"
version = "0.2.1"
edition = "2021"
default-run = "jokolay"

[[bin]]
name = "jokolay"
path = "src/main.rs"

[features]
# will not work because wayland won't allow us to get global cursor position
wayland = ["egui_window_glfw_passthrough/wayland"]

[dependencies]
joko_core = { path = "../joko_core" }
joko_render = { path = "../joko_render" }
jmf = { path = "../joko_marker_format", package = "joko_marker_format" }
jokolink = { path = "../jokolink" }
egui_window_glfw_passthrough = { version = "0.8" }
# we use this instead of cap-dirs because we want to debug/show the jokolay path to users
# and `Dir` from cap-dirs doesn't allow us to get the path.
cap-directories = { workspace = true }
cap-std = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }

egui = { workspace = true, features = ["serde"] }

rayon = { workspace = true }
uuid = { workspace = true }

