[package]
name = "jokolay"
version = "0.2.1"
edition = "2021"
default-run = "jokolay"

[[bin]]
name = "jokolay"
path = "src/main.rs"


[features]
default = ["messages_any"]
# will not work because wayland won't allow us to get global cursor position
wayland = ["egui_window_glfw_passthrough/wayland"]
messages_any = []
messages_downcast = []
messages_bincode = []


[dependencies]
enumflags2 = { workspace = true }
joko_component_manager = { path = "../joko_component_manager" }
joko_component_models = { path = "../joko_component_models" }
joko_plugin_manager = { path = "../joko_plugin_manager" }
joko_render_manager = { path = "../joko_render_manager" }
joko_package_manager = { path = "../joko_package_manager" }
joko_link_manager = { path = "../joko_link_manager" }
joko_link_models = { path = "../joko_link_models" }
egui_window_glfw_passthrough = { version = "0.8" }
# we use this instead of cap-dirs because we want to debug/show the jokolay path to users
# and `Dir` from cap-dirs doesn't allow us to get the path.
cap-directories = { workspace = true }
cap-std = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
ringbuffer = { workspace = true }
mutually_exclusive_features = { workspace = true }


rayon = { workspace = true }
serde = { workspace = true }
rfd = { workspace = true }
glam = { workspace = true }
scopeguard = "1.2.0"
smol_str = { workspace = true }

egui = { workspace = true, features = ["serde"] }
egui_extras = { workspace = true }

uuid = { workspace = true }
toml = "0.8.12"
directories-next = "2.0.0"

